TASK4__CODSOFT.ipynb

--- a/TASK4__CODSOFT.ipynb
+++ b/TASK4__CODSOFT.ipynb
@@ -19,9 +19,9 @@
       "source": [
         "▶**TASK-4 : SALES PREDICTION USING PYTHON**\n",
         "\n",
-        "> Author: Hetanshi Acharya\n",
+        "> Author: Velan K\n",
         "\n",
-        "> Batch: July\n",
+        "> Batch: February\n",
         "\n",
         "> Domain: Data Science"
       ],
